Implement broadcasting "AttachNewNode"