@@ -6,8 +6,10 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
+import java.lang.reflect.Method;
 import java.net.ServerSocket;
 import java.net.Socket;
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
@@ -24,6 +26,7 @@ import message.IPCMessage;
 import message.Message;
 import message.Message.MESSAGE_TYPE;
 import server.ExternalService;
+import util.IpChecker;
 
 /*
  * OperationManager - 메인 쓰레드
@@ -49,6 +52,9 @@ public class OperationManager {
 	
 	// 메세지 큐 (External Service로부터 수신된 메세지를 위한 큐)
 	private Queue<Message> msgQueue;
+	
+	// IPC-message 타입에 따른 메서드
+	HashMap<String, Method> ipcMsgHandler;
 
 	PrintWriter fd_out;
 	BufferedReader fd_in;	
@@ -68,8 +74,52 @@ public class OperationManager {
 	private OperationManager() {
 		setMsgQueue(new LinkedList<Message>());
 		setMountpoint(System.getenv("HOME") + File.separator + "CloudShare");
+		ipcMsgHandler = new HashMap<>();
+		
+		// ipc message handler에 핸들러 등록
+		try {
+			ipcMsgHandler.put(IPCMessage.REQUEST_CHECK_CONNECTION, 
+					OperationManager.class.getMethod("handle_reqCheckConnection", Message.class));
+			ipcMsgHandler.put(IPCMessage.REQUEST_FILELIST, 
+					OperationManager.class.getMethod("handle_reqFileList", Message.class));
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
 	}
 	
+	/*
+	 * IPC Message Handler 정의부분
+	 */
+	
+	/*
+	 * handle_reqCheckConnection
+	 * FUSE-mounter로부터 check connection 메세지를 받았을 때
+	 * check connection에 대한 ACK 메세지를 보낸다.
+	 */
+	public static void handle_reqCheckConnection(Message msg) {
+		// Fuse-mounter로부터 check connection 메세지 받았을 때
+		getInstance()._handle_reqCheckConnection(msg);
+	}
+	public void _handle_reqCheckConnection(Message msg) {
+		Debug.print(TAG, "handle_reqCheckConnection", 
+				"Succeed to receive request_checkconnection from fuse-mounter. Send ACK message.");
+		// Java 프로그램과의 통신 테스트용이기 때문에 바로 ACK을 보낸다.
+		sendMessageToFuseMounter(new IPCMessage(
+				IPCMessage.ACK_CHECK_CONNECTION,
+				IPCMessage.NOTHING
+				));
+	}
+	public static void handle_reqFileList(Message msg) {
+		getInstance()._handle_reqFileList(msg);
+	}
+	private void _handle_reqFileList(Message msg) {
+		Debug.print(TAG, "handle_reqFileList", "Succeed to receive request_FileList from fuse-mounter. Send ACK message.");
+		/* 
+		 * ExternalService에 filelist request 메세지 송신 요청
+		 * 후에, filelist에 대한 Answer을 받으면 ExternalService에서 일괄 처리한다.
+		 */
+		ExternalService.sendMessageToFamily(msg);
+	}
 	/*
 	 * private_opendisk
 	 * 
@@ -113,15 +163,9 @@ public class OperationManager {
 	 * FUSE관련된 부분은 C로 프로그래밍된 프로그램을 동작시킨다. 이 때 IPC를 위해
 	 * Socket통신을 사용한다.
 	 */
-	private void private_mount() {
+	private void _mount() {
 		// 마운트 프로그램(FUSE) 실행
-		// TODO 마운트 프로그램 실행되는 부분을 자바 프로그램이 실행되었을 때 자동으로 하도록 구현해야 함.
-		// executeFUSEProgram();
-		
-		// 소켓 통신 준비
-		while (true) {
-			doSocketConnection();
-		}
+		executeFUSEProgram();
 	}
 
 	/*
@@ -209,9 +253,11 @@ public class OperationManager {
 	 * FUSE-Mounter로부터 수신되는 메세지는 다음의 특징을 갖는다.
 	 * 메세지 타입 -> 메세지 값
 	 * 때문에 각각의 경우에 대해서 처리를 해준다.
+	 * 또한 FUSE-mounter의 입장에서는 오직 Operator와만 통신하므로, 모든 메세지는 broadcast의 특징을 갖는다.
 	 */
 	private void HandleMessageFromFuseMounter() throws IOException, NullMessageException {
     	String r = fd_in.readLine(); 
+    	String t = null;
     	if (r == null) {
     		throw new NullMessageException();
     	}
@@ -219,21 +265,23 @@ public class OperationManager {
     	Message request = new Message();
     	if (r.compareTo(Message.MESSAGE_TOKEN) == 0) {	// 처음 수신된 메세지는 ::__:: 토큰
     		// 메세지 타입 및 디테일 설정
-    		String t = fd_in.readLine();	
-    		request.setType(t);
-    		request.setDetail(request.getType());
+    		t = fd_in.readLine();
+    		// t의 예상값: [request]_[detail]
+    		String[] values = t.split("_");
+    		
+    		request.setType(values[0]);
+    		request.setDetail(values[1]);
     	}
     	// 메세지 값 설정
+    	request.setFrom(IpChecker.getPublicIP());
     	request.setValue(fd_in.readLine().substring(2));
     	
+    	// 메세지가 완성되면 이를 핸들러로 보낸다.
     	if(fd_in.readLine().compareTo(Message.MESSAGE_TOKEN) == 0) {
-    		Debug.print(TAG, "receiveAndHandleMessage", "Complete to establish message for external service.");
-    		// ExternalService의 SendQueue에 메세지를 등록한다. 
     		try {
-				ExternalService.getInstance().getSendQMutex().acquire();
-	    		ExternalService.getSendQueue().add(request);
-	    		ExternalService.getInstance().getSendQMutex().release();
-			} catch (InterruptedException e) {
+    			Debug.print(TAG, "HandleMessageFromFuseMounter", "Call handler("+t+")");
+				ipcMsgHandler.get(t).invoke(ipcMsgHandler.get(t), request);
+			} catch (Exception e) {
 				e.printStackTrace();
 			}
     	}
@@ -265,22 +313,42 @@ public class OperationManager {
 	 * TODO handleMessage 구현 
 	 * FUSE-Mounter가 보낸 메세지를 처리하는 부분이다.
 	 */
+	@SuppressWarnings("unused")
 	private void handleMessage(IPCMessage msg) {
 		Debug.print(TAG, "handleMessage", "Message : " + msg.getType() + ", " + msg.getValue());
 	}
 	
 	/*
-	 * sendMessage
+	 * sendMessageToFuseMounter
 	 * FUSE-Mounter에게 메세지를 보내는 메서드.
 	 * 처음 Connection에서는 ACK을 보내면서 확인했지만 로컬에서만 이루어지고 간단하므로 
 	 * ACK을 따로 받지 않고 보내기만 한다. 
 	 * (ACK을 보내는 것이 아니다)
 	 */
 	private void sendMessageToFuseMounter(IPCMessage msg) {
-		Debug.print(TAG, "sendMessage", "Message : " + msg.getType() + ", " + msg.getValue());
+		Debug.print(TAG, "sendMessageToFuseMounter", "Message : " + msg.getType() + ", " + msg.getValue());
 		String value = msg.getType() + "::" + msg.getValue();
 		fd_out.println(value);
 		fd_out.flush();
+	}
+	
+	/*
+	 * sendMessageToExternalService
+	 * ExternalService로 보내는 메세지의 경우, 특정 클라이언트에게 보내는 것이 아니기 때문에
+	 * broadcast 메세지로 처리한다.
+	 */
+	@SuppressWarnings("unused")
+	private void sendMessageToExternalService(IPCMessage msg) {
+		Debug.print(TAG, "sendMessageToExternalService", "Message : " + msg.getType() + ", " + msg.getValue());
+
+		String[] values = msg.getType().split("_");
+		ExternalService.sendMessageToFamily(new Message(
+				MESSAGE_TYPE.BROADCAST,
+				values[1],
+				null,
+				null,
+				msg.getValue()
+				));
 	}
 
 	/*
@@ -288,12 +356,16 @@ public class OperationManager {
 	 * C로 구현된 프로그램을 실행하는 코드
 	 */
 	private void executeFUSEProgram() {
+		Debug.print(TAG, "executeFUSEProgram", "EXecute cloudshare program");
 		try {
-			@SuppressWarnings("unused")
-			Process process = Runtime.getRuntime().exec("./CloudShare");
+			final ProcessBuilder pb = 
+					new ProcessBuilder("./CloudShare", "-f", "~/CloudShare");
+			final Process p = pb.start();
+			assert p.getInputStream().read() == -1;
+			
 		} catch (IOException e) {
 			e.printStackTrace();
-			System.err.println("Failed to execute FUSE based program");
+			Debug.error(TAG, "executeFUSEProgram", "Failed to execute FUSE based program");
 		}
 	}
 	
@@ -310,19 +382,30 @@ public class OperationManager {
 	 * 정해진 디렉토리에 마운트를 시도한다.
 	 */
 	public static void mount() {
-		getInstance().private_mount();			// FUSE 마운트
+		getInstance()._mount();			// FUSE 마운트
 	}
 	
+	public static void startOperator() {
+		getInstance()._startOperator();
+	}
+	
+	private void _startOperator() {
+		// 소켓 통신 준비
+		while (true) {
+			doSocketConnection();
+		}
+	}
+
 	/*
 	 * updateDisk
 	 * @param filelist 파일리스트
 	 * 파라미터로 전해받은 파일 리스트를 통해서 disk를 업데이트한다.
 	 */
-	public static void updateDisk(List v) {
+	public static void updateDisk(List<String> v) {
 		getInstance().private_updateDisk(v);
 	}
 
-	private void private_updateDisk(List filelist) {
+	private void private_updateDisk(List<String> filelist) {
 		IPCMessage msg = new IPCMessage(IPCMessage.REQUEST_REFRESH, filelist.toString());
 		sendMessageToFuseMounter(msg);
 	}
